# ogse-cadmium

./: .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: model_factory.hpp  util.hpp
includes/data_structures/: couplings_set.hpp  instances_set.hpp  scenario.hpp
includes/models/: emergency_area.hpp  hospital.hpp
includes/models/basic/: accumulator.hpp  generator.hpp  processor.hpp
includes/models/bem/: bc.hpp  br.hpp  cf.hpp
includes/models/messages/: emergency.hpp  packet.hpp  packet_oil.hpp
includes/models/oil_gdp/: gdp_cell.hpp  oil_price_generator.hpp
scenarios/: basic.json  oil_gdp.json  scenario.json
